# VINS

./: cmds.txt  vio_matlab.mlx
Inertial/: calib_gyro.py  refine_gravity.py  visual_inertial_alignment.py
VIO/: vio_core_vio_core.py
VIO/config/: right_camera.yaml
VIO/feature_manager/: fast_detector.py  feature_extractor.py  gridder.py
VIO/imu/:  math_utils.py  imu_measurement.py  preintegration.py  velocity_estimator.py
VIO/memory_management/: sliding_window.py  view_set.py
VIO/optimization/: bundle_adjustment.py  camera_factor.py  ceres_bundle_adjustment.py  factor_graph.py  graph_builder.py  imu_factor.py  median_depth.py
VIO/optimization/ceres_ba/: CMakeLists.txt  ceres_ba.cpp
VIO/ros_wrapper/: vio_subscriber.py  vio_visualizer.py
VIO/vio_core/: landmarks.py  pnp.py  preprocess_image.py  ransac.py  reprojection.py  triangulate.py  vio_core.py  vio_core_tested.py  vio_core_updated.py
Visual_odometry/Inertial/: calib_gyro.py  imu_chunk_db.py  imu_pipeline.py  optimize_scale_gravity_velocity.py  preintegrate.py  refine_gravity.py  visual_inertial_alignment.py
Visual_odometry/config/: imu.yaml  ros_config.yaml
Visual_odometry/feature_database/: database.py  landmark_map.py
Visual_odometry/feature_extraction/: fast_detector.py  feature_extractor.py  gridder.py  klt_tracker.py  (+1 more)
Visual_odometry/motion_estimation/bundle_adjustment/: CMakeLists.txt  ba_solver.cpp  bundle_adjustment.py  commands.txt
optimization/: graph_builder.py  graph_sync.py  state_update.py
reference/: VIO_Complete_Walkthrough.docx
vins_project/: grid_orb.py  orb_video.py
(+30 files in other folders)
